--- a/scss/foundation/_variable.scss
+++ b/scss/foundation/_variable.scss
@@ -1,3 +1,6 @@
-$color-main: #333;
-$color-accent: #0066ff;
-$font-base: 16px;
+// $color-accent: #0066ff;
+// $font-base: 16px;
+
+$color-textLink: #808080;
+$color-textMain: #4d4d4d;
+$color-main: #4b91ca;
