--- a/scss/foundation/_base.scss
+++ b/scss/foundation/_base.scss
@@ -1,6 +1,15 @@
 @use "variable" as v;
 
+html {
+  font-family:
+    "ヒラギノ角ゴ ProN W3", "Noto Sans JP", sans-serif, "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック体", YuGothic, "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, Verdana, Roboto, "Droid Sans", "Noto Sans KR", "Noto Sans SC", "Noto Sans TC", sans-serif
+}
+
 body {
-  font-size: v.$font-base;
-  background-color: aqua;
+  line-height: 1;
+  font-size: 16px;
+}
+
+a {
+  text-decoration: none;
 }
