--- a/scss/object/project/_hero.scss
+++ b/scss/object/project/_hero.scss
@@ -80,8 +80,8 @@
   display: block;
   width: 100%;
   height: 100%;
-  border-top: 2px solid #005bac;
-  border-right: 2px solid #005bac;
+  border-top: 3px solid #e7a576;
+  border-right: 3px solid #e7a576;
 }
 
 /* 左 */
