--- a/scss/foundation/_variable.scss
+++ b/scss/foundation/_variable.scss
@@ -1,6 +1,4 @@
-// $color-accent: #0066ff;
-// $font-base: 16px;
-
 $color-textLink: #808080;
+$color-textSub: #808080;
 $color-textMain: #4d4d4d;
 $color-main: #4b91ca;
