--- a/scss/object/component/_card.scss
+++ b/scss/object/component/_card.scss
@@ -1,10 +1,46 @@
-.c-card {
-  background: #fff;
-  border: 1px solid #ddd;
-  padding: 12px;
-}
+@use "../../foundation/variable" as v;
 
-.c-card img {
-  width: 100%;
-  height: auto;
+.c-card {
+  &__event {
+    display: flex;
+    flex-direction: column;
+    width: 280px;
+    height: 290px;
+    padding: 12px;
+    border-radius: 10px;
+    box-shadow: 0 0 5px 0 rgba(77, 77, 77, 0.3);
+    background: #F5F5F5;
+  }
+
+  &__img--event {
+    width: 100%;
+    height: 170px;
+    border-radius: 8px;
+    object-fit: cover;
+  }
+
+  &__tag {
+    font-size: 11px;
+    font-weight: 700;
+    color: #FFF;
+    background-color: v.$color-textMain;
+    border-radius: 30px;
+    padding: 2px 11px;
+    margin-top: 10px;
+    align-self: flex-start
+  }
+
+  &__title {
+    font-size: 12px;
+    color: v.$color-textMain;
+    margin-top: 8.4px;
+  }
+
+  &__period {
+    height: 18px;
+    font-size: 12px;
+    line-height: 18px;
+    color: v.$color-textSub;
+    margin-top: 4.8px;
+  }
 }
