--- a/scss/object/utility/_gap.scss
+++ b/scss/object/utility/_gap.scss
@@ -1,3 +1,13 @@
+.u-mt {
+  &--4 {
+    margin-top: 4px;
+  }
+
+  &--15 {
+    margin-top: 15px;
+  }
+}
+
 .u-mr {
   &--5 {
     margin-right: 5px;
@@ -9,6 +19,10 @@
 }
 
 .u-ml {
+  &--20 {
+    margin-left: 20px;
+  }
+
   &--50 {
     margin-left: 50px;
   }
